fixed issue with the body of the html  clipping with the nav bar on large phones in landscape mode by adjusting header height

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -530,7 +530,7 @@ footer a i {
     }
 
     main {
-        margin-top: 150px;
+        margin-top: 160px;
         /* Adjust this margin to match respectivily to the header height (~+20px) */
     }
 }
